# Satisfactory-Factory-Calculator

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml
website/: __init__.py  graph_creation.py  models.py  views.py
website/satisfactoryobjects/: building.py  recipe.py
website/static/: style.css
website/templates/: base.html  calculator.html  changelog.html  data.html  graph.html  quick_graph.html  quick_graph_result.html  recipes.html  results.html
website/templates/my_pyvis_templates/: template.html
website/webscraping/: get_images.py  get_recipes.py
