[tool.poetry]
name = "Satisfactory Factory Planner"
version = "0.1.0"
description = "Basic factory planner website for the game 'Satisfactory', being used to learn new libraries and skills."
authors = ["Lukah Connolly Sams <lukahcsams@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
